--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,9 +1,8 @@
 use_frameworks!
-
+source 'https://github.com/wangzhaoyang123/podtestspecs.git'
 platform :ios, '10.0'
-
 target 'podtest_Example' do
-  pod 'podtest', :path => '../'
+  pod 'podtest'
 
   target 'podtest_Tests' do
     inherit! :search_paths
