--- a/Example/Podfile
+++ b/Example/Podfile
@@ -2,7 +2,7 @@ use_frameworks!
 source 'https://github.com/wangzhaoyang123/podtestspecs.git'
 platform :ios, '10.0'
 target 'podtest_Example' do
-  pod 'podtest'
+  pod 'podtest', '~> 0.2.0'
 
   target 'podtest_Tests' do
     inherit! :search_paths
